<resources>
    <string name="app_name">Proof of Delivery</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="TripNo">Trip 0</string>
    <string name="worksheetNo">Work Sheet No : </string>
    <string name="tripDate">Trip Date : </string>
    <string name="Start">Start</string>
    <string name="Finish">Finish</string>
    <string name="err_gps1">Can\'t get Lat/Long Please Try Again</string>
    <string name="errLogin">Login Fail!! Please Try Again</string>
</resources>
