<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.hitachi_tstv.yodpanom.yaowaluk.pod_val.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgMALogo"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_margin="@dimen/margin"
            app:srcCompat="@drawable/logo_v2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Login"
            android:textColor="@color/Black"
            android:textSize="@dimen/txt_h1" />

        <EditText
            android:id="@+id/edtMAUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Username"
            android:inputType="textPersonName"
            android:textSize="@dimen/txt_h2" />

        <EditText
            android:id="@+id/edtMAPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:textSize="@dimen/txt_h2" />

        <Button
            android:id="@+id/btnMALogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/green_button"
            android:text="@string/Login"
            android:textSize="@dimen/txt_h3"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>