<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hitachi_tstv.yodpanom.yaowaluk.pod_val.JobActivity">

    <LinearLayout
        android:id="@+id/linJATop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/TripNo"
            android:textColor="@color/Black"
            android:textSize="@dimen/txt_h1"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_weight="0.6"
                android:text="@string/worksheetNo"
                android:textColor="@color/Black"
                android:textSize="@dimen/txt_nm" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_weight="1"
                android:textSize="@dimen/txt_nm" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_weight="0.6"
                android:text="@string/tripDate"
                android:textColor="@color/Black"
                android:textSize="@dimen/txt_nm" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_marginRight="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_weight="1"
                android:textSize="@dimen/txt_nm" />
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/lisJAStore"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lisJABottom"
        android:layout_below="@+id/linJATop" />

    <LinearLayout
        android:id="@+id/lisJABottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:text="@string/Start"
            android:textColor="@color/Black"
            android:textSize="@dimen/txt_h3"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:layout_weight="1"
            android:background="@drawable/green_button"
            android:text="@string/Finish"
            android:textSize="@dimen/txt_h3"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>